--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
@@ -140,7 +140,7 @@
                         <input type="hidden" name="Image1" class="form-control" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
                     <button type="button" class="delete" id="Image1-clear" style="width:200px; text-align:center;">移除當前照片</button>
                         <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/DeafultBookPicture.jpg'">
+                            <img src="" alt="img1" id="img1" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                         </div>
                     <div class="d-flex" style="width:200px; justify-content:space-evenly;">
                         <label for="file1" style="cursor:pointer;padding:10px;border-radius: 5px; background-color:#0000cd;color:white; height:52px;  white-space: nowrap;">
@@ -155,7 +155,7 @@
                         <input type="hidden" name="Image2" class="form-control" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
                     <button type="button" class="delete" id="Image2-clear" style="width:200px; text-align:center;">移除當前照片</button>
                         <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/DeafultBookPicture.jpg'">
+                            <img src="" alt="img1" id="img1" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                         </div>
                     <div class="d-flex" style="width:200px; justify-content:space-evenly;">
                         <label for="file2" style="cursor:pointer;padding:10px;border-radius: 5px; background-color:#0000cd;color:white; height:52px; white-space: nowrap;">
@@ -170,7 +170,7 @@
                         <input type="hidden" name="Image3" class="form-control" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
                     <button type="button" class="delete" id="Image3-clear" style="width:200px; text-align:center;">移除當前照片</button>
                         <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/DeafultBookPicture.jpg'">
+                            <img src="" alt="img1" id="img1" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
                         </div>
                     <div class="d-flex" style="width:200px; justify-content:space-evenly;">
                         <label for="file3" style="cursor:pointer;padding:10px;border-radius: 5px; background-color:#0000cd;color:white; height:52px; white-space: nowrap;">
