--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -32,11 +32,11 @@
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
                     @if(item.ISBN.Length == 10)
                     {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../pictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     }
                     @if (item.ISBN.Length == 13)
                     {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../pictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     }
                 </div>
                 <table class="container-fluid">
