--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -1,11 +1,11 @@
 ﻿@model CoreMVC5_UsedBookProject.ViewModels.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "登入";
 }
 
 <div class="container-fluid">
-    <h1 style="margin-top:15px;">登入</h1>
+    <h1>登入</h1>
     <hr />
     <div class="row">
         <div class="col-12">
