--- a/CoreMVC5_UsedBookProject/Views/Account/Register.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "註冊";
 }
 
 <div class="container-fluid">
