--- a/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Shoppingcart.cshtml
@@ -1,6 +1,8 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
-
+@{
+    ViewBag.Title = $"購物車";
+}
 <div class="container-fluid">
     <h1>購物車</h1>
 
