--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model WishsViewModel
+@{
+    ViewBag.Title = $"願望清單";
+}
 <div class="container-fluid">
     <h1>願望清單</h1>
     <div class="row">
