--- a/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/SearchProducts.cshtml
@@ -1,10 +1,11 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model MyProductsViewModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "搜尋商品";
 }
 <div class="container-fluid">
-    <h1>@ViewBag.Count</h1>
+    <h1>搜尋商品</h1>
+    <h2>@ViewBag.Count</h2>
     <div class="row py-2">
         @if (Model.Products.Count > 0)
         {
