--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -4,9 +4,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "變更我的資訊";
 }
 <div class="container-fluid pb-5">
-    <h1>我的資訊</h1>
+    <h1>變更我的資訊</h1>
     <p class="text-danger">@TempData["Message"]</p>
     <div class="row">
         <div class="col-12">
