--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterUserName.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterUserName.cshtml
@@ -1,11 +1,11 @@
 ﻿@model CoreMVC5_UsedBookProject.ViewModels.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "註冊使用者名稱";
 }
 
 <div class="container-fluid">
-    <h1>註冊</h1>
+    <h1>註冊使用者名稱</h1>
     <hr />
     <div class="row">
         <div class="col-12">
