--- a/CoreMVC5_UsedBookProject/Views/Buyer/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Index.cshtml
@@ -2,8 +2,9 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = $"隱私中心";
+    ViewBag.Title = "買家中心";
 }
+
 <div class="container-fluid">
-    <h1>隱私中心</h1>
+    <h1>買家中心</h1>
 </div>
