--- a/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
@@ -2,11 +2,11 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = "首頁";
+    ViewBag.Title = "賣家中心";
 }
 
-<div class="container-fluid pb-5">
-    <h1>待辦事項清單</h1>
+<div class="container-fluid">
+    <h1>賣家中心</h1>
     <h2><strong>買賣</strong>待處理事項</h2>
     <div class="row">
         <div class="col-4 px-1 my-1">
@@ -49,5 +49,4 @@
             </div>
         </div>
     </div>
-    <a href="/Home/Index" class="btn btn-primary mt-2">回首頁</a>
 </div>
