--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -4,10 +4,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = $"我的商品({ViewBag.trade})";
+    ViewBag.Title = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}商品";
 }
 
-<div class="container-fluid pb-5 gap-10px">
+<div class="container-fluid gap-10px">
     <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")商品</h1>
     <p class="my-3">新增商品上限 <span style="@(Model.ProductNewLimit[0] >= Model.ProductNewLimit[1] ? "color: red;" : "color: black;")">@(Model.ProductNewLimit[0]) / @(Model.ProductNewLimit[1])</span></p>
     <div class="d-flex my-3 gap-10px">
