--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -4,10 +4,10 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    ViewBag.Title = $"我的銷售({ViewBag.trade})";
+    ViewBag.Title = $"{(ViewBag.Trade == "交換" ? "交換" : "買賣")}銷售";
 }
 
-<div class="container-fluid pb-5 gap-2">
+<div class="container-fluid gap-10px">
     <h1>@(ViewBag.Trade == "交換" ? "交換" : "買賣")銷售</h1>
     <ul class="nav nav-pills my-3 gap-10px status">
         <li class="nav-item d-flex">
