--- a/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Seller/All.css
@@ -1,4 +1,9 @@
-﻿.page-link {
+﻿body, main {
+    background-image: url('/adminimg/wood.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.page-link {
     background-color: #282B2E05;
 }
     .page-link:hover {
@@ -11,12 +16,8 @@ body {
 h1 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
-#menu {
-    width: 100%;
-    height: fit-content;
-}
 #login {
-    width: fit-content;
+    width: 100%;
     height: 100%;
     word-break: break-word;
     overflow: hidden;
@@ -31,12 +32,6 @@ h1 {
     background-color: #282B2E;
     color: white !important;
 }
-.aside-text {
-    background-color: #80808050;
-}
-.aside-text > p {
-    font-size: 18px;
-}
 .aside-link > a {
     color: black;
     font-size: 18px;
@@ -47,40 +42,6 @@ h1 {
     .aside-link:hover > a {
         color: white !important;
     }
-.hamber {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-}
-    .hamber:hover {
-        border-radius: 50%;
-        background-color: #282B2E;
-    }
-.search {
-    width: 30px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
-}
-
-    .search:hover > i {
-        border-radius: 50%;
-        color: blue !important;
-    }
-.hamber-i {
-    cursor: pointer;
-    color: black;
-    font-size: 26px;
-}
-    .hamber:hover > i {
-        color: white;
-    }
-
 .account-p {
     border-bottom: 1px solid black;
     font-size: 20px;
@@ -98,109 +59,60 @@ h1 {
         color: white !important;
         background-color: #282B2E;
     }
-.account-nav-a {
-    color: black;
-    text-align: center;
-    font-size: 20px;
-}
-
-    .account-nav-a:hover {
-        color: blue !important;
-    }
 img {
     width: 100%;
     object-fit: contain;
     max-width: 100%;
     max-height: 100%;
 }
-.aside-menu {
-    display:flex;
-}
-    .aside-menu::-webkit-scrollbar {
-        display: none;
-    }
-.search-menu {
+.login-menu-full {
     position: absolute;
-    top: 50px;
-    left: -10000px;
-    background-color: white;
-    z-index: 3;
+    top: 0;
+    right: 10000px;
+    z-index: 998;
     width: 100%;
+    height: 500px;
+    background-color: #80808050;
 }
 .login-menu {
     border: 1px solid black;
     position: absolute;
-    top: 50px;
-    right: 10000px;
-    z-index: 3;
-    width: 200px;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    width: 100%;
+    max-width: 500px;
+    background-image: url('/adminimg/wood.jpg');
+    background-repeat: no-repeat;
 }
-#switch-aside:checked + .aside-menu {
-    left: 0;
-}
-#switch-search:checked + .search-menu {
-    left: 0;
-}
-#switch-login:checked + .login-menu {
+#switch-login:checked + .login-menu-full {
     right: 0;
 }
-#navbar {
-    position: fixed;
-    z-index: 999;
-    height: 50px;
-    width: 100%;
+body {
+    overflow-x: hidden;
 }
-#login-nickname {
-    display: none;
+
+main, footer {
+    overflow: hidden;
+}
+
+main {
+    padding-bottom: 75px;
 }
 @media (min-width:576px) {
-    .search-menu {
-        position: relative;
-        top: 0;
-        left: 0;
-    }
-    .search {
-        display: none;
-    }
-}
-header {
-    height: 50px;
-    min-height: 50px;
-    max-height: 50px;
 }
 @media (min-width:768px) {
-    .aside-menu {
-        left: 0;
-    }
-    .hamber {
-        display: none;
-    }
-    #login-nickname {
-        display: block;
-    }
 }
 @media (min-width:992px) {
 }
 @media (min-width:1200px) {
 }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
 img {
     user-select: none;
     -moz-user-select: none;
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
-    vertical-align: middle;
-    display: inline-block;
 }
 
 .gap-10px {
