--- a/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Edit.cshtml
@@ -14,6 +14,7 @@
         <partial name="~/Views/Seller/EditTablePartial/ProductImage.cshtml" />
         <partial name="~/Views/Seller/EditTablePartial/SaleInformation.cshtml" />
         <input type="hidden" name="ProductId" class="form-control" id="ProductId" value="@Model.ProductId" readonly />
+        <input type="hidden" class="form-control" id="CreateBy" value="@Model.CreateBy" readonly />
         <div id="Test_Image_div" class="d-none">
             Test_Image_div
         </div>
