--- a/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/ChangeUserInfo.cshtml
@@ -18,7 +18,7 @@
                         <label asp-for="UserIcon" class="control-label"></label>
                     </div>
                     <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black; overflow: hidden;">
-                        <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'">
+                        <img src="/Images/Users/@Model.Id/@Model.UserIcon" asp-append-version="true" alt="img1" id="img1" onerror="this.src='/DeafultPictures/EmptyUserIcon.png'">
                     </div>
                     <div class="d-flex align-items-end mt-2">
                         <label for="file1" class="btn btn-primary">
@@ -48,6 +48,31 @@
                     <input type="submit" value="變更保存" class="btn btn-primary" />
                 </div>
             </form>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-danger mt-5" data-toggle="modal" data-target="#staticBackdrop">
+                <i class="bi bi-trash"></i> 刪除帳號
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">確認刪除帳號?</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            確認刪除帳號?這將會永久消失此帳號
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+                            <a href="@Url.Action("DeleteUser", "Account", new {Id = Model.Id})" class="btn btn-danger"><i class="bi bi-trash"></i> 刪除</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
