--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/OtherInformation.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailTablePartial/OtherInformation.cshtml
@@ -13,6 +13,10 @@
     </thead>
     <tbody>
         <tr>
+            <td>@Html.DisplayNameFor(model => model.CreateByName)</td>
+            <td>@Html.DisplayFor(model => model.CreateByName)</td>
+        </tr>
+        <tr>
             <td>@Html.DisplayNameFor(model => model.CreateDate)</td>
             <td>@Html.DisplayFor(model => model.CreateDate)</td>
         </tr>
