--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
@@ -183,6 +183,7 @@
                     </div>
                 </div>
                 <input type="hidden" name="Id" class="form-control" id="Id" value="@Model.Id" readonly />
+                <button type="submit" class="return" style="margin:20px 0;">保存圖片</button>
             </form>
         <h4 class="alert alert-danger" style="width:800px; text-align:center;margin:20px 0;">更改文字預覽區</h4>
         <div style="display: flex;">
