新功能測試與bug

--- a/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
@@ -166,6 +166,10 @@
                             </div>
                         </div>
                 }
+                    <div>
+                        <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">測試</a>
+                        <a asp-controller="AdministratorToDoList" asp-action="DoListForCheck" class="return">測試</a>
+                    </div>
                 </div>
                 </div>
             </div>
