--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -22,7 +22,7 @@
     {
         Layout = "_LayoutAdministratorCharts";
     }
-    else if (controller == " GetCpuController")
+    else if (controller == "GetCpuController")
     {
         Layout = "_LayoutGetCpu";
     }
@@ -38,10 +38,10 @@
     {
         Layout = "_LayoutAccount";
     }
-    else if (controller == "warningController")
-    {
-        Layout = "_LayoutWarning";
-    }
+    //else if (controller == "AdministratorToDoList")
+    //{
+    //    Layout = "_LayoutDoList";
+    //}
     else
     {
         Layout = "_Layout"; 
