--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -14,7 +14,7 @@
     {
         Layout = "_LayoutAdministratorProfile";
     }
-    else if (controller == "Administratorlist")
+    else if (controller == "Administratorlist" || controller == "AdministratorToDoList")
     {
         Layout = "_LayoutAdministratorlist";
     }
