--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -61,6 +61,7 @@
     {
         <h2 class="text-center my-5">願望清單是空的</h2>
     }
+    <partial name="_NowPageWishsPartial" />
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
