--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -9,28 +9,42 @@
 <div class="container-fluid">
     <h1>交換訂單詳情</h1>
     <form action="~/Buyer/BarterOrderDetails" method="post">
-        <div class="container-fluid my-2">
-            <h2>@Model.Trade</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <h2>@Model.Trade - </h2>
+            <h3>@Model.Status</h3>
+        </div>
+        <h2>@Html.DisplayNameFor(model => model.DenyReason)</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <p>@Model.DenyReason</p>
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
-                <p>
-                    <span>@Html.DisplayNameFor(model => model.DenyReason) </span>
-                    <span>
-                        <div class="d-flex">
-                            <textarea asp-for="DenyReason" class="form-control show-length" placeholder="輸入取消原因"></textarea>
-                            <p id="DenyReason_length" class="text-right ml-4"></p>
-                        </div>
-                        <span asp-validation-for="DenyReason" class="text-danger"></span>
-                    </span>
-                </p>
+                <div class="d-flex w-100">
+                    <textarea asp-for="DenyReason" class="form-control show-length" placeholder="輸入取消原因"></textarea>
+                    <p id="DenyReason_length" class="text-right ml-4"></p>
+                </div>
+                <span asp-validation-for="DenyReason" class="text-danger"></span>
             }
             else
             {
-                <p><span>@Html.DisplayNameFor(model => model.DenyReason) </span><span>@Model.DenyReason</span></p>
+                <p>@Model.DenyReason</p>
             }
-            <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
         </div>
-        <h2>對方的商品 @Model.SellerName</h2>
+        <h2>對方的商品 @Model.BuyerName</h2>
+        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
+            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+                <img src="/Images/Users/@Model.BuyerId/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+            </div>
+            <div class="container-fluid my-2">
+                <h2>@Model.BuyerTitle</h2>
+                <h2>@Model.Trade</h2>
+                <p><span>@Html.DisplayNameFor(model => model.BuyerISBN) </span><span>@Model.BuyerISBN</span></p>
+                <p><span>@Html.DisplayNameFor(model => model.BuyerAuthor) </span><span>@Model.BuyerAuthor</span></p>
+            </div>
+            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
+                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
+            </div>
+        </div>
+        <h2>我的商品 @Model.SellerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
                 <img src="/Images/Users/@Model.SellerId/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
@@ -43,23 +57,6 @@
             </div>
             <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                 <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
-            </div>
-        </div>
-        <h2>我的商品 @Model.BuyerName</h2>
-        <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
-                <img src="/Images/Users/@Model.BuyerId/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
-            </div>
-            <table class="container-fluid">
-                <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.BuyerTitle)</td><td>@Model.BuyerTitle</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.BuyerISBN)</td><td>@Model.BuyerISBN</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.BuyerAuthor)</td><td>@Model.BuyerAuthor</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-            </table>
-            <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
-                <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.BuyerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
             </div>
         </div>
         <br />
