--- a/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/MySales.cshtml
@@ -43,14 +43,17 @@
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
                     <img src="/Images/Users/@item.SellerId/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.SellerName)</td><td>@item.SellerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.BuyerName)</td><td>@item.BuyerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.DenyReason)</td><td>@item.DenyReason</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.SellerProductId)</td><td>@item.SellerProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.Trade)</td><td>@item.Trade</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.Order.Status)</td><td>@item.Status</td></tr>
-                </table>
+                <div class="container-fluid">
+                    <h2>@item.SellerName</h2>
+                    <h2>@item.SellerTitle</h2>
+                    <p>@item.Trade</p>
+                    <p>@item.Status</p>
+                    @if (item.Trade.Contains("買賣"))
+                    {
+                        <h2>NT$@(decimal.Round(item.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(item.SellerUnitPrice, 0))</h2>
+                    }
+                    <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
+                </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                     <a href="@Url.Action("Details", "Buyer", new {ProductId = item.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
                     <a href="@Url.Action("OrderDetails", "Buyer", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
@@ -64,16 +67,15 @@
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="/Images/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                    <img src="/Images/Users/@item.SellerId/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.SellerName)</td><td>@item.SellerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.BuyerName)</td><td>@item.BuyerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.DenyReason)</td><td>@item.DenyReason</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.SellerProductId)</td><td>@item.SellerProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.Trade)</td><td>@item.Trade</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.Status)</td><td>@item.Status</td></tr>
-                </table>
+                <div class="container-fluid">
+                    <h2>@item.SellerName</h2>
+                    <h2>@item.SellerTitle</h2>
+                    <p>@item.Trade</p>
+                    <p>@item.Status</p>
+                    <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
+                </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                     <a href="@Url.Action("Details", "Buyer", new {ProductId = item.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
                     <a href="@Url.Action("BarterOrderDetails", "Buyer", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
