--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="container-fluid">
     <h1>商品詳情</h1>
-    <p class="text-danger">@TempData["Message"]</p>
+    <p class="text-danger" id="error">@TempData["Message"]</p>
     <partial name="~/Views/Seller/DetailTablePartial/Swiper.cshtml" />
     <form action="~/Buyer/Details" method="post">
         <partial name="~/Views/Seller/DetailTablePartial/ProductInformation.cshtml" />
