--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -43,15 +43,16 @@
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
                     <img src="/Images/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
-                <div class="container-fluid my-2">
+                <div class="container-fluid">
                     <h2>@item.BuyerName</h2>
-                    <h2>@item.Trade</h2>
+                    <h2>@item.SellerTitle</h2>
+                    <p>@item.Trade</p>
+                    <p>@item.Status</p>
                     @if (item.Trade.Contains("買賣"))
                     {
                         <h2>NT$@(decimal.Round(item.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(item.SellerUnitPrice, 0))</h2>
                     }
-                    <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason) </span><span>@item.DenyReason</span></p>
-                    <p><span>@Html.DisplayNameFor(model => model.Order.Status) </span><span>@item.Status</span></p>
+                    <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
                 </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
 
@@ -69,14 +70,13 @@
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
                     <img src="/Images/Users/@item.SellerId/Products/@item.SellerProductId/@item.SellerImage1" asp-append-version="true" class="m-auto" alt="@item.SellerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                 </div>
-                <table class="container-fluid">
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.SellerName)</td><td>@item.SellerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.BuyerName)</td><td>@item.BuyerName</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.DenyReason)</td><td>@item.DenyReason</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.SellerProductId)</td><td>@item.SellerProductId</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.Trade)</td><td>@item.Trade</td></tr>
-                    <tr><td>@Html.DisplayNameFor(model => model.BarterOrder.Status)</td><td>@item.Status</td></tr>
-                </table>
+                <div class="container-fluid">
+                    <h2>@item.BuyerName</h2>
+                    <h2>@item.SellerTitle</h2>
+                    <p>@item.Trade</p>
+                    <p>@item.Status</p>
+                    <p><span>@Html.DisplayNameFor(model => model.Order.DenyReason)</span><span>@item.DenyReason</span></p>
+                </div>
                 <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                     <a href="@Url.Action("Details", "Seller", new {ProductId = item.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
                     <a href="@Url.Action("BarterOrderDetails", "Seller", new {OrderId = item.OrderId, trade = ViewBag.trade})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 訂單詳情</a>
